--- a/css/main.css
+++ b/css/main.css
@@ -299,7 +299,7 @@ body {
   display: block;
   width: 100%;
   height: 80%;
-  background-size: cover;
+  object-fit: cover;
   border-radius: 5px;
   -webkit-box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
           box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
